# ECMv18

./: .gitignore  README.md
Desktop/ecm/ECM/: .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  NextSoftware.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Desktop/ecm/ECM/cfg/per-class/: classC_randomaccess.cfg
Desktop/ecm/ECM/cfg/per-sequence-Cfe2025/: GLH1_DOTA2s360.cfg  GLH2_GTAVs090.cfg  GLH3_Level1.cfg  GLH4_Minecraft.cfg  HRC1_ChandelierCropBR.cfg  HRC2_FashionLadyCrop1.cfg  HRC3_WaterfallForest.cfg  HRC4_WomenFootball.cfg  HRU1_AMS06.cfg  HRU2_MeridianHDR2.cfg  HRU3_NeptuneFountain3R1.cfg  HRU4_SparksWelding.cfg  SLH1_Beatriz.cfg  SLH2_GregoryCactus2.cfg  SLH3_GregoryScarf2.cfg  SLH4_OfficeWalkAtWall.cfg  SRH1_DucksTakeOff.cfg  SRH2_DrivingPOV4.cfg  SRH3_Seeking.cfg  SRH4_Umbrella.cfg  SRU1_CrowdRun.cfg  SRU2_DrivingPOV3.cfg  SRU3_FireDance.cfg  SRU4_HallwayScene.cfg  URH1_Camellia.cfg  URH2_Hobby-w5xz-backpack.cfg  URH3_NightLandscapeRunning.cfg  URH4_Sports-76a2-iceball.cfg  URH5_VerticalVideo-3709-snow.cfg  URH6_VerticalVideo-3d96-walk.cfg
Desktop/ecm/ECM/source/App/BitstreamExtractorApp/: BitstreamExtractorApp.vcxproj  BitstreamExtractorApp.vcxproj.filters  CMakeLists.txt  cmake_install.cmake
Desktop/ecm/ECM/source/App/CabacTraining/: CabacTraining.vcxproj  CabacTraining.vcxproj.filters  cmake_install.cmake
Desktop/ecm/ECM/source/App/DecoderAnalyserApp/: CMakeLists.txt  DecoderAnalyserApp.vcxproj  DecoderAnalyserApp.vcxproj.filters  cmake_install.cmake
Desktop/ecm/ECM/source/App/DecoderApp/: CMakeLists.txt  (+6 more)
Desktop/ecm/ECM/source/Lib/EncoderLib/: BinEncoder.cpp  BinEncoder.h  CABACWriter.cpp  CABACWriter.h  CMakeLists.txt  EncAdaptiveLoopFilter.cpp  EncAdaptiveLoopFilter.h  EncCfg.h  EncCu.cpp  EncCu.h  EncGOP.cpp  EncGOP.h  EncLib.cpp  EncLib.h  EncLoopFilterCccm.cpp  EncLoopFilterCccm.h  EncModeCtrl.cpp  EncModeCtrl.h  EncNNFilter.cpp  EncNNFilter.h  EncNNFilterUnified.cpp  EncNNFilterUnified.h  EncSampleAdaptiveOffset.cpp  EncSampleAdaptiveOffset.h  EncSlice.cpp  EncoderLib.vcxproj  EncoderLib.vcxproj.filters  InterSearch.cpp  InterSearch.h  IntraSearch.cpp  IntraSearch.h  VLCWriter.cpp  cmake_install.cmake
Desktop/ecm/ECM/source/Lib/EncoderLib/EncoderLib.dir/Release/EncoderLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
(+251 files in other folders)
